# inside-browser

./: .gitignore  BrowserOS-Results  BuuletProof.md  Escape room  Ideas  LICENSE  Mail to workdlow  Problemstatement  README.md  Solition  bullet proof prompt  statefull  uc9  use cases
HDLD/: README.md
HDLD/Architecture/: README.md
HDLD/HDLD_Intents_Taxonomy/: README.md
HDLD/Is it Agentic Platform?/: README.md
HDLD/Local Execution (Same Chrome Session)/: README.md
HDLD/Masking/: README.md
HDLD/Navigation Mechanism/: README.md
HDLD/Sample Agentic AI Use Cases for the Platform/: README.md
extension/: background.js  content.js  manifest.json  panel.html  panel.js  popup.html  popup.js  styles.css
extension/bg/: api.js  constants.js  index.js  orchestrator.js  state.js  tabs.js
extension/common/: messages.js
extension/content/: dom.js  main.js  state.js  styles.css  ui.js
packagejsons/: npm.json  pnpm.json
plan/: README.md  executive summary.txt
plan/stakeholder/: README.md
src/: Makefile  bookmarks.py  llm.py  main.py  models.py  persistence.py  plan_tools.py  planner.py  pyproject.toml  settings.py  traversal_manager.py  utils.py
src/agents/: automation.py  base.py  bookmarks.py  summarizer.py
widget/src/: widget.js
